added travis deploy

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,16 @@ before_install:
 // does not return automatically after it completes.
 script:
     - docker run -e CI=true amitabc75/docker-react npm run test
+    
+// deply to aws's elastic bean stalk
+deploy:
+    provider: elasticbeanstalk
+    region: "us-east-2"
+    app: "docker-react"
+    env: "DockerReact-env"
+    bucket_name: "elasticbeanstalk-us-east-2-580293432730"
+    bucket_path: "docker-react"
+    on:
+        branch: master
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
